--- a/PhoneApp2/BatteryAnalytics.csproj
+++ b/PhoneApp2/BatteryAnalytics.csproj
@@ -93,6 +93,8 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Place_symylator.cs" />
+    <Compile Include="KMeans.cs" />
     <Compile Include="LocalizedStrings.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
